--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 SimpraCaseStudy/SimpraCaseStudy.xcodeproj/project.xcworkspace/xcuserdata/sefaibis.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
